@startuml ERD_TabiMoney
!define TABLE_COLOR #E1F5FF
!define PK_COLOR #FFD700

entity "users" as users TABLE_COLOR {
    * id : BIGINT <<PK>> PK_COLOR
    --
    * email : VARCHAR(255) <<UNIQUE>>
    * username : VARCHAR(100) <<UNIQUE>>
    * password_hash : VARCHAR(255)
    first_name : VARCHAR(100)
    last_name : VARCHAR(100)
    phone : VARCHAR(20)
    avatar_url : VARCHAR(500)
    is_verified : BOOLEAN
    verification_token : VARCHAR(255)
    reset_token : VARCHAR(255)
    reset_token_expires_at : TIMESTAMP
    last_login_at : TIMESTAMP
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
    deleted_at : TIMESTAMP
}

entity "user_profiles" as profiles TABLE_COLOR {
    * id : BIGINT <<PK>> PK_COLOR
    * user_id : BIGINT <<FK>>
    --
    monthly_income : DECIMAL(15,2)
    currency : VARCHAR(3)
    timezone : VARCHAR(50)
    language : VARCHAR(5)
    notification_settings : JSON
    ai_settings : JSON
    telegram_enabled : BOOLEAN
    telegram_notifications : BOOLEAN
    telegram_language : VARCHAR(5)
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
}

entity "categories" as categories TABLE_COLOR {
    * id : BIGINT <<PK>> PK_COLOR
    user_id : BIGINT <<FK>>
    --
    * name : VARCHAR(100)
    name_en : VARCHAR(100)
    description : TEXT
    icon : VARCHAR(50)
    color : VARCHAR(7)
    is_system : BOOLEAN
    is_active : BOOLEAN
    sort_order : INT
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
}

entity "transactions" as transactions TABLE_COLOR {
    * id : BIGINT <<PK>> PK_COLOR
    * user_id : BIGINT <<FK>>
    * category_id : BIGINT <<FK>>
    ai_suggested_category_id : BIGINT <<FK>>
    --
    * amount : DECIMAL(15,2)
    description : TEXT
    * transaction_type : ENUM
    * transaction_date : DATE
    transaction_time : TIME
    location : VARCHAR(200)
    tags : JSON
    metadata : JSON
    is_recurring : BOOLEAN
    recurring_pattern : VARCHAR(50)
    ai_confidence : DECIMAL(3,2)
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
}

entity "financial_goals" as goals TABLE_COLOR {
    * id : BIGINT <<PK>> PK_COLOR
    * user_id : BIGINT <<FK>>
    --
    * title : VARCHAR(200)
    description : TEXT
    * target_amount : DECIMAL(15,2)
    current_amount : DECIMAL(15,2)
    target_date : DATE
    goal_type : ENUM
    priority : ENUM
    is_achieved : BOOLEAN
    achieved_at : TIMESTAMP
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
}

entity "budgets" as budgets TABLE_COLOR {
    * id : BIGINT <<PK>> PK_COLOR
    * user_id : BIGINT <<FK>>
    category_id : BIGINT <<FK>>
    --
    * name : VARCHAR(200)
    * amount : DECIMAL(15,2)
    * period : ENUM
    * start_date : DATE
    * end_date : DATE
    is_active : BOOLEAN
    alert_threshold : DECIMAL(5,2)
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
}

entity "notifications" as notifications TABLE_COLOR {
    * id : BIGINT <<PK>> PK_COLOR
    * user_id : BIGINT <<FK>>
    --
    * title : VARCHAR(200)
    * message : TEXT
    * notification_type : ENUM
    priority : ENUM
    is_read : BOOLEAN
    read_at : TIMESTAMP
    metadata : JSON
    * created_at : TIMESTAMP
}

entity "ai_analyses" as ai_analyses TABLE_COLOR {
    * id : BIGINT <<PK>> PK_COLOR
    * user_id : BIGINT <<FK>>
    --
    * analysis_type : ENUM
    * data : JSON
    confidence_score : DECIMAL(3,2)
    model_version : VARCHAR(50)
    * created_at : TIMESTAMP
}

entity "user_sessions" as sessions TABLE_COLOR {
    * id : BIGINT <<PK>> PK_COLOR
    * user_id : BIGINT <<FK>>
    --
    * token_hash : VARCHAR(255)
    * refresh_token_hash : VARCHAR(255)
    * expires_at : TIMESTAMP
    * refresh_expires_at : TIMESTAMP
    user_agent : TEXT
    ip_address : VARCHAR(45)
    is_active : BOOLEAN
    * created_at : TIMESTAMP
}

entity "telegram_accounts" as telegram TABLE_COLOR {
    * id : BIGINT <<PK>> PK_COLOR
    * telegram_user_id : BIGINT <<UNIQUE>>
    * web_user_id : BIGINT <<FK>>
    --
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
}

entity "telegram_link_codes" as telegram_codes TABLE_COLOR {
    * id : BIGINT <<PK>> PK_COLOR
    * code : VARCHAR(16) <<UNIQUE>>
    telegram_user_id : BIGINT
    * web_user_id : BIGINT <<FK>>
    * expires_at : TIMESTAMP
    used_at : TIMESTAMP
    * created_at : TIMESTAMP
}

users ||--o{ profiles : "has one"
users ||--o{ sessions : "has many"
users ||--o{ transactions : "has many"
users ||--o{ categories : "has many"
users ||--o{ goals : "has many"
users ||--o{ budgets : "has many"
users ||--o{ notifications : "has many"
users ||--o{ ai_analyses : "has many"
users ||--o| telegram : "has one"
users ||--o{ telegram_codes : "has many link codes"

categories ||--o{ transactions : "categorizes"
categories ||--o{ budgets : "has budget"

transactions ||--o| categories : "ai_suggested"

@enduml

